# fastapi-template

./: .coderabbit.yml  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.override.yml  docker-compose.override.yml  docker-compose.test.override.yml  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml
.github/actions/setup-test-env/: action.yml
.github/workflows/: build-and-push.yml  ci-pipeline.yml  ci-workflows.yml  format-and-lint.yml  run-docker-tests.yml  run-linters.yml  run-local-tests.yml  run-tests.yml
alembic/: env.py
src/: main.py
src/api/v1/: api.py
src/api/v1/routers/: item_router.py
src/api/v1/schemas/: item_schema.py
src/api/v1/services/: item_service.py
src/config/: __init__.py  db_settings.py  settings.py
src/db/: database.py
src/db/models/: item.py
src/fapi_db_tmpl/config/: app_settings.py
src/fapi_db_tmpl/db/: database.py
tests/: conftest.py  envs.py
tests/db/: conftest.py  test_db.py
tests/db/routers/: test_items.py
tests/e2e/: conftest.py  test_e2e.py  test_e2e_api.py
tests/intg/: conftest.py  test_api.py  test_placeholder.py
tests/unit/: conftest.py  test_main.py
