[tool.poetry]
name = "pvt-llm-api"
version = "0.1.0"
description = "A local LLM wrapped as an API for reusable access."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
alembic = ">=1.13.1,<2.0.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
httpx = ">=0.27.0,<0.28.0"
psycopg = { version = ">=3.1,<4.0", extras = ["binary"] }
pytest = "^8.4.1"
pytest-asyncio = "^0.23.7"
ruff = "^0.12.10"
testcontainers = {extras = ["postgres", "compose"], version = "^4.6.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
target-version = ['py312']
exclude = '''
/(\
    \.git
    | \.mypy_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
target-version = "py312"
extend-exclude = [
    ".venv",
    "__pycache__",
    "migrations",
    "alembic",
    "db.sqlite3",
    "*.pyc"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"] # E501 (line too long) is ignored

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."
path_separator = "os"
